pkg/controller/service/testdata/ingress/basic/expected.yaml.d/secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6ekNDQXJlZ0F3SUJBZ0lVZWtRUWRTNXluTTUwUVVDZjBMOHVtd1lOUUJRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1R6RUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdUQlZSbGJYQmxNUkF3RGdZRFZRUUhFd2RCY21sNgpiMjVoTVE0d0RBWURWUVFLRXdWQlkyOXliakVPTUF3R0ExVUVBeE1GUTBrZ1EwRXdIaGNOTWpJd05USTBNakUwCk5UQXdXaGNOTWpNd05USTBNakUwTlRBd1dqQlNNUXN3Q1FZRFZRUUdFd0pWVXpFT01Bd0dBMVVFQ0JNRlZHVnQKY0dVeEVEQU9CZ05WQkFjVEIwRnlhWHB2Ym1FeERqQU1CZ05WQkFvVEJVRmpiM0p1TVJFd0R3WURWUVFERXdoQgpZMjl5YmlCRFNUQ0NBU [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBcG4xSkhVT3NHUTZZcklTQTVqR1FtQVdvWG1KRW8waGdGL3ZHUXV2dXB6T0czbHNTCnAxTk9UTXo5TjdURHNOK3pJaGZWb2VDWXkweEUzQTJtaHd6QitOQXNnYWR0WGd5bUpJOWFieXUwOEQzUGtOcmcKWTdKalk5cDBrUzdCS1VRU2RhQy9PeTdGdThnclVQbUtBbTRtM0d1ZDRudFVwbWRrczdnOWVHSDhZZFZyL3p5bApXejNwRzF6YmNmelBPQXo1cHlUM2hZZ0JIOVk5U2J4SnFlM0hhd1p1UVRlcm5yVFBRcStXVTZXMWk1TjRIYTRhCmQ0RGF1Y2xjcy80YnplVHB5d3JXaGVpVEZGc3pzcmFPbDIxNnVBMnpWQU9ZWXQ0YVdzb1lyUisxOGhqdkNTU3MKZnZndkd5aGtyV [...]
kind: Secret
metadata:
  name: test-tls-oneimage-1234567890ab
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/managed: "true"
type: kubernetes.io/tls
