pkg/controller/service/testdata/ingress/basic/expected.yaml.d/serviceinstance.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  uid: 1234567890abcdef
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  appName: app-name
  appNamespace: app-namespace
  publish:
    - hostname: localhost
    - hostname: ci1.acorn.not
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
  container: oneimage
  ports:
    - targetPort: 81
      publish: true
      protocol: http
    - port: 90
      targetPort: 91
      publish: true
      protocol: tcp
    - targetPort: 92
      publish: true
      protocol: tcp
status:
  conditions:
  - reason: Success
    status: "True"
    success: true
    type: defined
  endpoints:
  - address: oneimage-app-name-a5b0aade.local.oss-acorn.io
    publishProtocol: https
  - address: ci1.acorn.not
    publishProtocol: https
  - address: localhost
    publishProtocol: https
  hasService: true
